maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall(){
	gauche()
	if (estFaceMur){
		droite()
		if (estFaceMur){
			droite()
			if(estFaceMur){
				droite()
			}else{
				avance
			}
		}else{
		avance()	
		}
		
	} else{
		avance()
	}

	
}
if(getPos()==(0,0)){
	while(!estSurBiscuit){
}
	setDirection(Direction.NORD)

if(estFaceMur){
	keepHandOnSideWall()
}else{
	avance()
}
}else{
	while(!estSurBiscuit){
	keepHandOnSideWall()
}
}
prendBiscuit()
}